[gd_scene format=3 uid="uid://ke06myf5cmfu"]

[ext_resource type="Script" uid="uid://mhfidpknp1ci" path="res://Scripts/enemy_ranged.gd" id="1_3bg5g"]
[ext_resource type="Texture2D" uid="uid://bicjuntfh5e7m" path="res://icon.svg" id="2_htpsb"]
[ext_resource type="Script" uid="uid://7gpps5mm7cnc" path="res://Scripts/States/state_machine.gd" id="3_htpsb"]
[ext_resource type="Script" uid="uid://b0mgc02kg6jbt" path="res://Scripts/States/enemy_states/enemy_ranged_follow.gd" id="4_t233f"]
[ext_resource type="Script" uid="uid://bglb8f73l40vc" path="res://Scripts/States/enemy_states/enemy_ranged_retreat.gd" id="5_5j68v"]
[ext_resource type="Script" uid="uid://cm1ws4sf4stcf" path="res://Scripts/States/enemy_states/enemy_ranged_attack.gd" id="5_kowwf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t233f"]
size = Vector2(122, 126)

[sub_resource type="Animation" id="Animation_t233f"]
resource_name = "new_animation"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kowwf"]
_data = {
&"new_animation": SubResource("Animation_t233f")
}

[node name="EnemyRanged" type="CharacterBody2D" unique_id=602971446]
motion_mode = 1
script = ExtResource("1_3bg5g")

[node name="Sprite2D" type="Sprite2D" parent="." unique_id=2053076233]
texture = ExtResource("2_htpsb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=1403542938]
shape = SubResource("RectangleShape2D_t233f")

[node name="StateMachine" type="Node" parent="." unique_id=1071155965 node_paths=PackedStringArray("initial_state", "state_label")]
script = ExtResource("3_htpsb")
initial_state = NodePath("follow")
state_label = NodePath("../Label")

[node name="follow" type="Node" parent="StateMachine" unique_id=566969481 node_paths=PackedStringArray("enemy", "animation_player")]
script = ExtResource("4_t233f")
enemy = NodePath("../..")
animation_player = NodePath("../../AnimationPlayer")

[node name="retreat" type="Node" parent="StateMachine" unique_id=1546491574 node_paths=PackedStringArray("enemy", "animation_player")]
script = ExtResource("5_5j68v")
enemy = NodePath("../..")
animation_player = NodePath("../../AnimationPlayer")

[node name="attack" type="Node" parent="StateMachine" unique_id=1090475047 node_paths=PackedStringArray("random_movement_timer", "enemy", "animation_player", "attack_timer")]
script = ExtResource("5_kowwf")
random_movement_timer = NodePath("../../random_movement_timer")
enemy = NodePath("../..")
animation_player = NodePath("../../AnimationPlayer")
attack_timer = NodePath("../../attack_timer")

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=1795590253]
libraries/ = SubResource("AnimationLibrary_kowwf")

[node name="attack_timer" type="Timer" parent="." unique_id=387591655]

[node name="random_movement_timer" type="Timer" parent="." unique_id=1770659748]

[node name="Label" type="Label" parent="." unique_id=367921579]
offset_left = -17.0
offset_top = 68.0
offset_right = 23.0
offset_bottom = 87.0

[node name="shooting_pos" type="Marker2D" parent="." unique_id=1191220714]
position = Vector2(91, 0)

[connection signal="timeout" from="attack_timer" to="StateMachine/attack" method="_on_attack_timer_timeout"]
[connection signal="timeout" from="random_movement_timer" to="StateMachine/attack" method="_on_random_movement_timer_timeout"]
